remove voting for admin
